<resources>
    <string name="app_name">Rutgers Cafe</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="your_order">Your Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="content_desc_donut_image">donut image</string>
    <string name="content_decs_coffee_image">coffee image</string>
    <string name="content_decs_cart_image">cart image</string>
    <string name="content_decs_store_order_image">store order image</string>
    <string name="content_desc_order_donut_image">order donut image</string>
    <string name="donut_type">Donut Type</string>
    <string name="flavor_type">Flavor Type</string>
    <string name="number_of_donut">Number of Donut</string>
    <string name="add_to_list">Add To List</string>
    <string name="remove_from_list">Remove From List</string>
    <string name="total">Total:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="coffee_type">Coffee Type</string>
    <string name="number_of_coffee">Count:</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="cream">Cream</string>
    <string name="caramel">Caramel</string>
    <string name="subtotal">Subtotal:</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="remove_selected_item">Remove Selected Item</string>
    <string name="place_order">Place Order</string>
    <string name="order_detail">Order Detail</string>
    <string name="tax">Tax:</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_amount">Order Amount</string>
    <string name="store_order">Store Order</string>
    <string name="order_number">Order Number:</string>
    <string name="orders">Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string-array name="count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="donut_alert_question">Do you want to remove Selected Item?</string>
    <string name="yes_answer">Yes</string>
    <string name="item_removed">Item is Removed.</string>
    <string name="no_answer">No</string>
    <string name="selected_no">You choose no action for alert box</string>
    <string name="alert_message">Alert</string>
    <string name="list_is_empty">Item list is empty</string>
    <string name="order_added">Order is added to Your order</string>
    <string name="place_store_order">Order is Placed.</string>
    <string name="order_not_placed">Order is not Placed. OrderList may be empty</string>
    <string name="order_removed">Order is Removed.</string>
</resources>