<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffff"
    tools:context="com.example.rutgerscafe.OrderCoffeeActivity">

    <ImageView
        android:id="@+id/coffeeImage"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_decs_coffee_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/coffeeimage" />

    <TextView
        android:id="@+id/CoffeeTypeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffee_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <Spinner
        android:id="@+id/CoffeeTypeSpinner"
        android:layout_width="197dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/CoffeeTypeLable"
        app:layout_constraintTop_toBottomOf="@id/CoffeeTypeLable"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/NumberCoffeeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_coffee"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <Spinner
        android:id="@+id/NumberofCoffeeSpinner"
        android:layout_width="197dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/NumberCoffeeLabel"
        app:layout_constraintTop_toBottomOf="@id/NumberCoffeeLabel"
        app:layout_constraintVertical_bias="0.096" />


    <Button
        android:id="@+id/AddtoCoffeeYourOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whippedCreamCheckBox"
        app:layout_constraintVertical_bias="0.548" />

    <CheckBox
        android:id="@+id/syrupCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/syrup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milkCheckBox" />

    <CheckBox
        android:id="@+id/milkCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/milk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creamCheckBox" />

    <CheckBox
        android:id="@+id/creamCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberCoffeeLabel" />

    <CheckBox
        android:id="@+id/whippedCreamCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/whipped_cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caramelCheckBox" />

    <CheckBox
        android:id="@+id/caramelCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/caramel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberofCoffeeSpinner" />

    <TextView
        android:id="@+id/Subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/syrupCheckBox"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/coffeePriceValue"
        android:layout_width="58dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toEndOf="@+id/Subtotal"
        app:layout_constraintTop_toBottomOf="@id/syrupCheckBox"
        app:layout_constraintVertical_bias="0.394" />

</androidx.constraintlayout.widget.ConstraintLayout>