<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffff"
    tools:context="com.example.rutgerscafe.OrderDetailsActivity">

    <ImageView
        android:id="@+id/cartImage"
        android:layout_width="112dp"
        android:layout_height="101dp"
        android:contentDescription="@string/content_decs_cart_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/cartimage" />

    <TextView
        android:id="@+id/SubTotalLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/SalesTaxLable"
        app:layout_constraintEnd_toEndOf="@id/your_order"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/YourOrderDetail"
        app:layout_constraintTop_toBottomOf="@id/YourOrderDetail"

        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/YourOrderDetail"
        android:layout_width="346dp"
        android:layout_height="211dp"
        android:text="@string/order_detail"
        android:background="#b0e0e6"
        app:layout_constraintBottom_toTopOf="@id/SubTotalLable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/your_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order"
        android:textColor="#64956d"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/YourOrderDetail"
        app:layout_constraintEnd_toEndOf="@id/SubTotalLable"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/YourOrderDetail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/SalesTaxLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_tax"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/yourOrderTotalLable"
        app:layout_constraintEnd_toEndOf="@id/YourOrderDetail"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/YourOrderDetail"
        app:layout_constraintTop_toBottomOf="@id/SubTotalLable"
        app:layout_constraintTop_toTopOf="@id/SalesTaxDetail"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/yourOrderTotalLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/YourOrderDetail"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/YourOrderDetail"
        app:layout_constraintTop_toBottomOf="@id/SalesTaxLable"
        app:layout_constraintTop_toTopOf="@id/YourOrderTotalDetail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/SubTotalDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="19dp"
        android:text="@string/order_amount"
        android:background="#b0e0e6"
        app:layout_constraintBottom_toTopOf="@+id/SalesTaxDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SubTotalLable"
        app:layout_constraintTop_toBottomOf="@+id/YourOrderDetail" />

    <TextView
        android:id="@+id/SalesTaxDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="18dp"
        android:text="@string/tax"
        android:background="#b0e0e6"
        app:layout_constraintBottom_toTopOf="@+id/YourOrderTotalDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SalesTaxLable"
        app:layout_constraintTop_toBottomOf="@+id/SubTotalDetail" />

    <TextView
        android:id="@+id/YourOrderTotalDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="172dp"
        android:text="@string/total_amount"
        android:background="#b0e0e6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/yourOrderTotalLable"
        app:layout_constraintTop_toBottomOf="@+id/SalesTaxDetail" />

    <Button
        android:id="@+id/RemoveSelectedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="67dp"
        android:text="@string/remove_selected_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PlaceOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrderTotalLable"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/PlaceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="73dp"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RemoveSelectedItem"
        app:layout_constraintTop_toBottomOf="@id/yourOrderTotalLable"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>