<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddToOrder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffff"
    android:contentDescription="@string/content_desc_order_donut_image"
    tools:context="com.example.rutgerscafe.OrderDonutActivity">

    <ImageView
        android:id="@+id/donutImage"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_desc_donut_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/donutimage" />

    <TextView
        android:id="@+id/DonutTypeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donut_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <Spinner
        android:id="@+id/DonutTypeSpinner"
        android:layout_width="197dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/DonutTypeLable"
        app:layout_constraintTop_toBottomOf="@id/DonutTypeLable"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/FlavorTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <Spinner
        android:id="@+id/FlavorTypeSpinner"
        android:layout_width="197dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/FlavorTypeLabel"
        app:layout_constraintTop_toBottomOf="@id/FlavorTypeLabel"
        app:layout_constraintVertical_bias="0.096" />


    <TextView
        android:id="@+id/NumberDonutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_donut"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".41" />

    <Spinner
        android:id="@+id/NumberofDonutSpinner"
        android:layout_width="197dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="@id/NumberDonutLabel"
        app:layout_constraintTop_toBottomOf="@id/NumberDonutLabel"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/AddToList"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_to_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberDonutLabel" />

    <Button
        android:id="@+id/RemoveFromList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NumberofDonutSpinner"
        app:layout_constraintVertical_bias="0.073" />

    <ListView
        android:id="@+id/DonutList"
        android:layout_width="371dp"
        android:layout_height="253dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/RemoveFromList"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="@id/AddToList"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <TextView
        android:id="@+id/Subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DonutList"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/Subtotal"
        app:layout_constraintTop_toBottomOf="@+id/DonutList"
        app:layout_constraintVertical_bias="0.472" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/Subtotal"
        app:layout_constraintTop_toBottomOf="@+id/DonutList"
        app:layout_constraintVertical_bias="0.384" />


</androidx.constraintlayout.widget.ConstraintLayout>

